docs: comprehensive README rewrite with all enterprise features
- Updated feature table with JSON layout, backpressure, size rolling, MDC, lookups
- Added full Configuration Reference section with all supported XML elements
- Updated architecture diagram to reflect JNI bridge
- Added JSON output example with MDC context
- Updated build instructions for Gradle workflow
- Removed outdated FFM/javac references